--- a/Angular/angular-basics/package.json
+++ b/Angular/angular-basics/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-in-memory-web-api": "~0.4.6",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "bootstrap":"~3.3.7"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
